--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,18 @@ header{
     background-color: white;
     height: 70px;
     margin-bottom: 40px;
+    line-height: 70px;
+    vertical-align: middle;
 }
 
 h1{
     font-weight: bold;
     display: inline;
-    text-align: center;
 }
 
 .logo{
     padding-left: 20px;
-    
+    display: inline;
 }
 
 .container{
@@ -36,6 +37,20 @@ h1{
     height: 60px;
     border-bottom: 1px solid rgb(211, 211, 211);
     vertical-align: middle;
-    
+    line-height: 60px;
+}
+
+.add-task{
+    background-color: deepskyblue;
+    color: white;
+    border-color: deepskyblue;
+    border-radius: 3px;
+}
+
+.add-section{
+    background-color: white;
+    color: rgb(211, 211, 211);
+    border-radius: 3px;
+    border-color: rgb(211, 211, 211);
 
 }
